--- a/src/content/case-studies/ministry-of-justice.mdx
+++ b/src/content/case-studies/ministry-of-justice.mdx
@@ -1,2 +1,15 @@
+---
+title: Ministry of Justice
+---
 
 # Ministry of Justice
+
+The Ministry of Justice is a major government department, at the heart of the justice system. We work to protect and advance the principles of justice. Our vision is to deliver a world-class justice system that works for everyone in society.
+
+## The challenge
+
+The Ministry of Justice (MoJ) is a major government department, at the heart of the justice system. We work to protect and advance the principles of justice. Our vision is to deliver a world-class justice system that works for everyone in society.
+
+## The solution
+
+The Ministry of Justice (MoJ) is a major government department, at the heart of the justice system. We work to protect and advance the principles of justice. Our vision is to deliver a world-class justice system that works for everyone in society.
