--- a/src/content/case-studies/ministry-of-justice.mdx
+++ b/src/content/case-studies/ministry-of-justice.mdx
@@ -6,10 +6,61 @@ title: Ministry of Justice
 
 The Ministry of Justice is a major government department, at the heart of the justice system. We work to protect and advance the principles of justice. Our vision is to deliver a world-class justice system that works for everyone in society.
 
-## The challenge
+## Case study
 
-The Ministry of Justice (MoJ) is a major government department, at the heart of the justice system. We work to protect and advance the principles of justice. Our vision is to deliver a world-class justice system that works for everyone in society.
+### HMCTS CFT Reform Programme
 
-## The solution
+Working with [Solirius](https://www.solirius.com) we designed and delivered multiple citizen-facing services for the HMCTS CFT Reform programme in different jurisdictions using a microservice architecture for reusable components. This has given each jurisdiction the ability to easily create user-centred GDS compliant services by integrating with the common components via RESTful APIs and asynchronous event queues. We designed and contributed to an open-source case management system, CCD, which securely stores sensitive data and is used by over 200,000 users. The system architecture is built on loosely-coupled, scalable and secure RESTful Azure PaaS microservices, deployed as Docker containers and managed by Kubernetes using a Jenkins CI/CD pipeline. The services comply with AA 3C WCAG 2.0 accessibility standards and passed the relevant GDS assessments.
 
-The Ministry of Justice (MoJ) is a major government department, at the heart of the justice system. We work to protect and advance the principles of justice. Our vision is to deliver a world-class justice system that works for everyone in society.
+### No Fault Divorce
+
+Due to a legislative change HMCTS were required to re-launch the Divorce service, going live on the exact date the new law came into effect. We assembled a high performing multi-functional team. By adopting HMCTS standards and maximising re-use of common components, our engineering team delivered on time and reduced the application size from 390,000 to 109,000 lines of code. Our team had significant previous HMCTS experience, and worked collaboratively with a diverse tech stack to create the new service. Core technologies used included:
+
+Java with Spring Boot
+Node.js with Nunjucks and Redis.
+Junit and Jest for unit testing.
+Docker, Kubernetes and Terraform for deployment automation.
+Gatling for performance testing.
+pa11y for automated accessibility testing.
+
+Full-stack DevOps Software Engineers proactively resolved issues themselves, and kept the service aligned with CoE DevOps practices whilst maintaining the GDS toolkit standards. QAs and SDETs designed all tests (unit, integration, end-to-end UI, cross browser accessibility, performance and security) and ensured execution within pipelines. DAC testing revealed zero remediations and achieved accreditation at first audit.
+
+During the development of the No Fault Divorce service, several new open source libraries were developed and No Fault Divorce became the exemplar service for all future services in HMCTS.
+
+The service has been very positively received by citizens and court staff, one judge noting its "now customary speed" when a [divorce was granted in 21 minutes](https://www.bbc.co.uk/news/uk-68821406).
+
+### Centre of Excellence (CoE)
+
+Integrated Civil Servant developers, from Graduate to seasoned developer into a complex multi-supplier environment.
+
+Developed dashboards to track key metrics such as Deployment Frequency, Lead Time to Changes, Mean Time to Recovery and Change Failure Rate using Grafana and Terraform pipelines.
+
+Fostered a vibrant development community within the organisation, hosting regular all hands meetings with over 100 developers.
+
+Developed a comprehensive set of [Engineering Standards](https://hmcts.github.io/standards/index.html) to encompass the best practices and guidelines for the development teams to follow.
+
+Coached the team on best use of Jenkins, GitHub Actions, Terraform, Helm, Flux and Kubernetes.
+
+Mentored the team on best practices around trunk based development and CI/CD.
+
+Audited the design and technical implementation of the services to ensure they met the HMCTS standards.
+
+### FaCT
+
+In September 2020, Solirius was asked to restack the Court and Tribunal Finder service, from a Python based service, to one built using Java and NodeJS, with the change in tech stack, also came the opportunity to rename the service, inline with GDS guidance, to Find a Court or Tribunal Service.
+
+The service is used by HMCTS staff and citizens, and can have approx 50,000 users in a day.  The service is designed to help citizens find the information they need either for their local Court or Tribunal Centres or where to send documentation or seek updates on their case.  Currently, it doesn’t interact with, or direct citizens to the HMCTS digital services, however, now it has been restacked to a technology that easily integrates with the new HMCTS digital services, this becomes possible in the near future.
+
+We supplied a small cross-functional, multi-disciplined development team to work closely with the client’s Product Owner and User Interaction Designer.  We used Jira, with Epics, tasks and stories, to help manage our work, and ensure our work was visible to all, this was even more important as the team were all working remotely.  Through robust Performance Testing, we were able to ensure the service could ramp up to meet peak demands, and scale back for quieter times, such as the weekends and evenings.
+
+We used scrum events to help us focus and achieve the sprint goals, and included the client team in all the ceremonies to keep us aligned.  We used the sprint review for the full team and stakeholders to review the sprint activity, demonstrate the work delivered and seek feedback from the stakeholders and client users.  At the end of each sprint we also held Retrospectives, again including the client team, so we could reflect on our progress and agree on incremental improvements to take into the next sprint.
+
+To ensure we developed our code to a high quality, we applied automated testing from the beginning, striving for 95+% code coverage.  As a result we were able to deliver quality code, minimise the need for manual testing and keep technical debt to a minimum.
+
+Within 12 weeks the service had been restacked and new customer journeys developed. The service is much cheaper to run and will dynamically scale to meet the demand and the change in requirements. The team then moved on to develop the ‘Admin Portal’ which enables the client staff to be able to update and maintain the Court and Tribunal data provided to the user.  We are now undertaking knowledge transfer to the client’s permanent staff team, to enable them to continue the development and enhancement of the service.
+
+
+
+
+
+
