--- a/src/content/index.mdx
+++ b/src/content/index.mdx
@@ -2,11 +2,15 @@
 # Norton Studios
 ## Provider of Digital Solutions for the Public Sector
 
-Specialists in
+Norton Studios is a trusted public sector delivery partner. We specialise Government Digital Services across the UK, with a particular focus on Accessibility (WCAG 2.1/2.2) and Responsive Website design.
 
-Accessibility (WCAG 2.1/2.2), Government Digital Services, Responsive Website, Advocates for Coding in the Open (https://www.gov.uk/service-manual/service-standard/point-12-make-new-source-code-open), Practitioners of the GDS Way: https://gds-way.digital.cabinet-office.gov.uk/standards/programming-languages.html#programming-languages
+We believe best practices matter, especially in the public sector. That's why we are vocal advocates for [Coding in the Open](https://www.gov.uk/service-manual/service-standard/point-12-make-new-source-code-open) and are practitioners of the [GDS Way](https://gds-way.digital.cabinet-office.gov.uk/standards/programming-languages.html#programming-languages).
 
-Services provided:
+Our services:
 
-Software Development, Test Automation & Quality Assurance, Architecture, Design and Agile Delivery
+- Software Development
+- Test Automation & Quality Assurance
+- Architecture
+- Design
+- Agile Delivery
 
