Update src/content/index.mdx (via Pages CMS)

--- a/src/content/index.mdx
+++ b/src/content/index.mdx
@@ -1,16 +1,9 @@
+---
+heading: SizeByte
+subheading: Beautiful Websites Made Simple
+---
+# SizeByte
 
-# Norton Studios
-## Provider of Digital Solutions for the Public Sector
+## Beautiful Websites Made Simple
 
-Norton Studios is a trusted public sector delivery partner. We specialise Government Digital Services across the UK, with a particular focus on Accessibility (WCAG 2.1/2.2) and Responsive Website design.
-
-We believe best practices matter, especially in the public sector. That's why we are vocal advocates for [Coding in the Open](https://www.gov.uk/service-manual/service-standard/point-12-make-new-source-code-open) and are practitioners of the [GDS Way](https://gds-way.digital.cabinet-office.gov.uk/standards/programming-languages.html#programming-languages).
-
-Our services:
-
-- Software Development
-- Test Automation & Quality Assurance
-- Architecture
-- Design
-- Agile Delivery
-
+SizeByte is a web design studio based in Kuala Lumpur, Malaysia. We provide fast, user-friendly websites with no upfront costs.
